--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.11",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
