--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.6.2",
     "react": "^17.0.1",
@@ -14,7 +15,7 @@
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^0.2.4"
   },
